@@ -35,7 +35,7 @@ This subpart is used to display the card number information dialog before the tr
 
 <div class="transactor-form">
     <form action="###REDIRECT_URL###" method="post" autocomplete="off" name="connectForm">
-        <input type="submit" name="pay" value="Connect to the ###TRANSACTOR_TITLE### server" />
+        <input type="submit" name="pay" value="Connect to the ###TRANSACTOR_TITLE### server"###XHTML_SLASH###>
         ###HIDDENFIELDS###
     </form>
 </div>
